--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "yyid"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/asaaki/yyid.rs"
 homepage = "https://github.com/asaaki/yyid.rs"
-documentation = "https://github.com/asaaki/yyid.rs"
+documentation = "http://asaaki.github.io/yyid.rs/yyid/index.html"
 description = """
 YYID generator (random tokens like UUIDv4)
 """
