--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,12 +8,21 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          components: rustfmt, clippy
     - name: Build
       run: cargo build --verbose
+    - name: Run format check
+      run: cargo fmt -- --check --verbose
+    - name: Run clippy
+      run: cargo clippy
     - name: Run tests
       run: cargo test --verbose
+    - name: Run tests
+      run: cargo rustdoc -- --test --verbose
