--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,5 +24,5 @@ jobs:
       run: cargo clippy
     - name: Run tests
       run: cargo test --verbose
-    - name: Run tests
-      run: cargo rustdoc -- --test --verbose
+    # - name: Run rustdoc tests
+    #   run: cargo rustdoc -- --test --verbose
