--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,16 @@
 [package]
 name = "yyid"
-version = "0.3.0"
+version = "0.3.1-dev"
 authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/asaaki/yyid.rs"
-documentation = "http://asaaki.github.io/yyid.rs/yyid/index.html"
 repository = "https://github.com/asaaki/yyid.rs"
-description = """
-YYID generator (random tokens like UUIDv4)
-"""
-keywords = ["yyid", "uuid", "random", "token"]
+description = "YYID generator (random tokens like UUIDv4)"
+keywords = ["yyid", "uuid", "unique", "random", "token"]
+# https://crates.io/category_slugs
+categories = ["data-structures", "development-tools::cargo-plugins"]
 
 [lib]
 crate-type = ["rlib", "staticlib"]
