--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,13 +16,5 @@ jobs:
         toolchain: stable
         override: true
         components: rustfmt, clippy
-    - name: Build
-      run: cargo build --verbose
-    - name: Run format check
-      run: cargo fmt -- --check --verbose
-    - name: Run clippy
-      run: cargo clippy
-    - name: Run tests
-      run: cargo test --verbose
-    # - name: Run rustdoc tests
-    #   run: cargo rustdoc -- --test --verbose
+    - name: CI run
+      run: make ci
