--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,14 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/asaaki/yyid.rs"
 repository = "https://github.com/asaaki/yyid.rs"
-description = "YYID generator (random tokens like UUIDv4)"
+description = "YYID generator (random tokens like UUIDv4, but using all the bits)"
 keywords = ["yyid", "uuid", "unique", "random", "token"]
 # https://crates.io/category_slugs
 categories = ["data-structures", "development-tools::cargo-plugins"]
+exclude = [".github/**"]
+
+[badges]
+maintenance = { status = "as-is" }
 
 [lib]
 crate-type = ["rlib", "staticlib"]
