--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "yyid"
 version = "0.7.0-pre"
 authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
-edition = "2018"
+edition = "2021"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/asaaki/yyid.rs"
@@ -24,12 +24,20 @@ name = "yyid_vs_uuid_bench"
 harness = false
 
 [features]
+default = []
+
 std = []
+fast-rng = ["rand"]
+uuid = ["dep:uuid"]
 
 [dependencies]
-libc = "0.2"
-getrandom = "0.2"
+libc = "0.2.137"
+getrandom = "0.2.8"
+
+rand = { version = "0.8.5", optional = true }
+uuid = { version = "1.2.2", optional = true }
 
 [dev-dependencies]
-criterion = "0.3"
-uuid = { version = "1.0", features = ["v4"] }
+criterion = "0.4.0"
+pretty_assertions = "1.3.0"
+uuid = { version = "1.2.2", features = ["v4"] }
