--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yyid"
-version = "0.7.0-pre"
+version = "0.7.0"
 authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
